use Java 16 and Spring Boot 2.5.0