@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.5</version>
+    <version>2.5.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -17,7 +17,7 @@
   <description>Testing Spring Boot Applications Masterclass</description>
 
   <properties>
-    <java.version>14</java.version>
+    <java.version>16</java.version>
     <node.version>v14.15.3</node.version>
     <spring-cloud.version>Hoxton.SR11</spring-cloud.version>
     <testcontainers.version>1.15.3</testcontainers.version>
@@ -207,23 +207,16 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <jvmArguments>--enable-preview</jvmArguments>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>--enable-preview</compilerArgs>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <argLine>--enable-preview</argLine>
           <!--<properties>
             <configurationParameters>
               junit.jupiter.execution.parallel.enabled = true
@@ -237,7 +230,6 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <argLine>--enable-preview</argLine>
           <includes>
             <include>**/*WT.java</include>
             <include>**/*IT.java</include>
